kubernetes/apps/network/envoy/gateway/tunnel.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: &name tunnel
  annotations:
    external-dns.alpha.kubernetes.io/target: "tunnel.${MAIN_DOMAIN}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
  labels:
    gateway: external
spec:
  gatewayClassName: envoy
  allowedListeners:
    namespaces:
      from: All
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: *name
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      # hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-${MAIN_DOMAIN/./-}-tls
          - kind: Secret
            name: wildcard-${SECRET_DOMAIN/./-}-tls
