kubernetes/apps/network/envoy/gateway/policies.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy-compression
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  compressor:
    - type: Brotli
      brotli: {}
      minContentLength: 1024
    - type: Gzip
      gzip: {}
      minContentLength: 1024
    - type: Zstd
      zstd: {}
      minContentLength: 1024
