kubernetes/apps/network/envoy/gateway/redirect.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: http
    - name: external
      namespace: network
      sectionName: http
    - name: tunnel
      namespace: network
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: www-redirect
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
    - name: tunnel
      namespace: network
      sectionName: https
  hostnames: ["${MAIN_DOMAIN}", "${SECRET_DOMAIN}"]
  rules:
    - filters:
        - requestRedirect:
            hostname: "www.${SECRET_DOMAIN}"
            statusCode: 301
          type: RequestRedirect
      matches:
        - path:
            type: Exact
            value: /
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: robots-txt
spec:
  parentRefs:
    - name: tunnel
      namespace: network
      sectionName: https
  hostnames: ["${MAIN_DOMAIN}", "${SECRET_DOMAIN}"]
  rules:
    - matches:
        - path:
            type: Exact
            value: /robots.txt
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Cache-Control
                value: public, max-age=600
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: robots-txt-filter
